# py-experiments

./: LICENSE  README.md
tdd-api/: pyproject.toml
tdd-api/src/tdd_api/: config.py  main.py  r.py
tdd-api/src/tdd_api/core/: dependencies.py  ioc.py  logging_config.py
tdd-api/src/tdd_api/models/: book.py
